--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 
     </head>
     <body>
+        <div id="vision-container">
+            
+        </div>
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
