--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
               <br><br>
               <input id='input-url' type="text" name="image" value="" placeholder="Enter your vision image URL..." class="input-text">
               <br><br>
+              
+              <p>Choose User</p>
+              <select id="users" name="users">
+                <option value="1">Grace</option>
+                <option value="2">Kinnari</option>
+                <option value="3">Kate</option>
+              </select>
+              <br><br>
 
               <input id= 'create-button' type="submit" name="submit" value="Create New Vision" class="submit">
             </form> 
