--- a/index.html
+++ b/index.html
@@ -24,14 +24,25 @@
               <br><br>
               <input id='input-url' type="text" name="image" value="" placeholder="Enter your vision image URL..." class="input-text">
               <br><br>
-              
-              <p>Choose User</p>
-              <select id="users" name="users">
-                <option value="1">Grace</option>
-                <option value="2">Kinnari</option>
-                <option value="3">Kate</option>
+
+              <p>Choose A Theme</p>
+              <select id="themes" name="themes">
+                <option value="1">Empowerment</option>
+                <option value="2">Self Love</option>
+                <option value="3">Career</option>
+                <option value="4">Love</option>
+                <option value="5">Home</option>
+                <option value="6">Travel</option>
+                <option value="7">Health</option>
+                <option value="8">Fitness</option>
+                <option value="9">Family</option>
+                <option value="10">Growth Mindset</option>
+                <option value="11">Creativity</option>
+                <option value="12">Music</option>
+                <option value="13">Art</option>
+                <option value="3">Other</option>
               </select>
-              <br><br>
+              <br><br> 
 
               <input id= 'create-button' type="submit" name="submit" value="Create New Vision" class="submit">
             </form> 
