--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <script src="src/index.js" charset="utf-8"></script>
+        <script src="src/vision.js" charset="utf-8"></script>
+
         <script src="" async defer></script>
     </body>
 </html>
