--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
         <div id="vision-container">
 
         </div>
+        <div id="update-vision">
+            
+        </div>
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
