add update functionality

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </head>
     <body>
         <div class="form-container">
-            <form id="create-vision-form" style="">
+            <form id="create-vision-form" data-action="create" style="">
               <h3>Create a Vision!</h3>
           
               <input id='input-title' type="text" name="title" value="" placeholder="Enter vision title" class="input-text">
@@ -40,7 +40,7 @@
                 <option value="11">Creativity</option>
                 <option value="12">Music</option>
                 <option value="13">Art</option>
-                <option value="3">Other</option>
+                <option value="14">Other</option>
               </select>
               <br><br> 
 
