modify walkthrough demo video link

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       </section>
       <br><br>
         <div class="search-input">
-        <p class="lead text-muted">Filter Visions By Theme</p>
+          <p class="lead text-muted">Search For Visions By Theme</p>
 
 
       </div>
